18.jul (ws)
      - #11558: pinch gesture for zooming in and out (patch from mokaspar)
      - fix #11524: no more recent files (patch from mokaspar)
      - fix #11108: Clicking on Piano Keyboard with no score causes crash
      - fix #11565: closing drumset after closing score causes crash
      - fix #11557: slow scroll events on the scoreview get lost
        (patch from mokaspar)
14.jul (ws)
      - fix #6380: Conflicting flag directions for sub-beams
13.jul (ws)
      - fix #11469: Selecting "Time Signatures" in palette causes crash
      - fix non default profile: missing palette symbols
      - fix #11473: Preference values overwritten on program initialisation
11.jul (ws)
      - fix #9907: Pasting multiple rests (one with overlap) causes crash
      - fix #11446: template directory ignored
      - fix #10362: Backw. comp.: lyrics underscores from 1.0 are sometimes corrupted
        (patch from miwarre)
      - fix #11448: Cancel on Style/TextStyle dlg box crashes if no edits
        (patch from miwarre)
      - fix #10826: Notes exceeding measure contents corrupt measure total value
        (patch from miwarre)
9.jul (ws)
      - new quartertone accidentals: sori, koron
      - moved fonts from mscore/mscore/fonts to mscore/fonts
8.jul (ws)
      - fix lyrics for guitar pro import
      - fix #11430: Cancel on General Style dlg box crashes if no edits (patch from miwarre)
7.jul (ws)
      - fix fret diagram
      - fix #11428: Right-click on tuplet or on a text brings up both Tuplet and Test
        property dialog boxes
      - squared longa and brevis (patch from miwarre)
      - fix image offsets (patch from miwarre)
      - fix multimeasure rest number position
5.jul (ws)
      - fix #11386: Quitting MuseScore causes crash
      - fix #10709: Unable to change TAB clef
4.jul (ws)
      - fixes for chorus parameter handling
      - restrict augmentation dot alignment to staff (instead of system)
3.jul (ws)
      - fixed subbeam logic
2.jul (ws)