@@ -1,4 +1,6 @@
 18.jul (ws)
+      - fix #11554: In "Single Palette Mode" the previous palette collapses only
+        half way (patch from mokaspar)
       - #11558: pinch gesture for zooming in and out (patch from mokaspar)
       - fix #11524: no more recent files (patch from mokaspar)
       - fix #11108: Clicking on Piano Keyboard with no score causes crash
